# triggerfish

./: CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  shell.nix
src/triggerfish/: __init__.py  __main__.py  completion_handler.py  config.py  ctags_manager.py  server.py  symbol_index.py
tests/: __init__.py  conftest.py  test_completion_handler.py  test_config.py  test_ctags_manager.py  test_integration.py  test_multi_trigger.py  test_server.py  test_symbol_index.py
